# unity-ai-reviewer

./: .gitignore  DESIGN_MEMO.md  README.md  config.example.yaml  pyproject.toml
.claude/: CLAUDE.md
SampleUnityProject/Assets/: UniversalRenderPipelineGlobalSettings.asset
SampleUnityProject/Assets/Scripts/: Enemy.cs  GameManager.cs  PlayerController.cs
SampleUnityProject/Assets/Scripts/Utilities/: StringHelper.cs
SampleUnityProject/ProjectSettings/: ProjectSettings.asset
reviewers/: convention.md  efficiency.md  gc_allocation.md  impact_analysis.md  resource_management.md  runtime_error.md  security.md  semantic_placement.md  unused_code.md  wheel_reinvention.md
src/: __init__.py  config.py  main.py
src/claude/: __init__.py  base_prompt.py  client.py  prompt_loader.py
src/claude/reviewers/: __init__.py  convention.py  efficiency.py  gc_allocation.py  impact_analysis.py  resource_management.py  runtime_error.py  security.py  unused_code.py  wheel_reinvention.py
src/github/: __init__.py  client.py  fix_pr_creator.py  git_operations.py  progress_comment.py
src/models/: __init__.py  metadata.py  usage.py
src/orchestrator/: __init__.py  engine.py  metadata.py
src/reviewer_registry/: __init__.py  loader.py  registry.py
src/unity/: __init__.py  compile_check.py  compiler.py
